--- a/a.html
+++ b/a.html
@@ -13,7 +13,7 @@ Simple HTML Page
 </HEAD>  
 <BODY>  
 <center> <!-- This tag align the text as center -->  
-JavaTpoint  
+I love JavaTpoint  
 <!-- The Body tag is used to display the content on a web page which is specify between the body tag.  -->  
 </center>  
 </BODY>  
