typescript training codes

--- a/assignment_21_08_23/to_do.html
+++ b/assignment_21_08_23/to_do.html
@@ -19,14 +19,15 @@
     </div>
 
     <script>
+        "use strict";
         let arr=[];
         let table = document.querySelector('tbody');
 
         function addData(){
             let comment = document.getElementById("comment");
-            data = comment.value;
+            let data = comment.value;
 
-            arr.push(data);
+            arr = [...arr, data]
             console.log(arr);
 
             table.innerHTML+=`<tr><td><input onchange="updateData(this)" value=${data}><button onclick="deleteData(this)">Remove</button></td></tr>`;
@@ -36,13 +37,18 @@
         function updateData(ele){
             let index = ele.parentElement.parentElement.rowIndex;
             arr[index] = ele.value;
+            arr = arr.map((e, i)=>{
+                if(i === index){
+                    e = ele.value;
+                }
+            });
             console.log(arr);
         }
 
         function deleteData(ele){
             let index = ele.parentElement.parentElement.rowIndex;
             let table = document.getElementById("table1");
-            arr.splice(index, 1);
+            arr = arr.filter((e, i)=> i!== index);
             table.childNodes[1].removeChild(table.childNodes[1].childNodes[index+1]);
             console.log(arr);
 
