--- a/assignment_22_08_23/index.html
+++ b/assignment_22_08_23/index.html
@@ -12,7 +12,7 @@
         <input name="city" value="" id="city" placeholder="Please enter your city name" onchange="api(this)" style="width: 400px; height:30px">
     </div>
 
-    <div>
+    <div id="result">
 
     </div>
     
